@@ -6,6 +6,7 @@ ChangeLog
 
 GIT HEAD
 
+- Fixed input MIDI RPN/NRPN running status processing.
 - Almost complete overhaul on the configure script command
   line options, wrt. installation directories specification,
   eg. --prefix, --bindir, --libdir, --datadir and --mandir.
